cargo_errors.log
    Checking ZY_os v0.1.0 (/home/zyphorix/code/ZY_os)
error: expected one of `)` or `,`, found `.`
  --> src/vga_buffer.rs:98:27
   |
98 |     fn write_str(&mut self. s: &str) -> fmt::Result {
   |                           ^
   |                           |
   |                           expected one of `)` or `,`
   |                           help: missing `,`

error[E0425]: cannot find type `Write` in this scope
  --> src/vga_buffer.rs:97:21
   |
52 | pub struct Writer {
   | ----------------- similarly named struct `Writer` defined here
...
97 | impl fmt::Write for Write {
   |                     ^^^^^
   |
help: a struct with a similar name exists
   |
97 | impl fmt::Write for Writer {
   |                          +
help: consider importing one of these traits
   |
45 + use crate::vga_buffer::fmt::Write;
   |
45 + use core::fmt::Write;
   |

error[E0574]: expected struct, variant or union type, found trait `Write`
   --> src/vga_buffer.rs:106:22
    |
 52 | pub struct Writer {
    | ----------------- similarly named struct `Writer` defined here
...
106 |     let mut writer = Write {
    |                      ^^^^^
    |
help: a struct with a similar name exists
    |
106 |     let mut writer = Writer {
    |                           +

Some errors have detailed explanations: E0425, E0574.
For more information about an error, try `rustc --explain E0425`.
error: could not compile `ZY_os` (bin "ZY_os") due to 3 previous errors
